--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "specialities",
   "version": "1.0.0",
-  "description": "",
+  "description": "Este ejercicio tiene como objetivo practicar el uso de Express para crear un servidor web que gestiona y muestra información de usuarios en diferentes rutas. Utilizaremos un conjunto de datos en formato JSON que representa usuarios con diversas características, como nombre, edad y especialidad.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "4.18.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jose-sinacento/specialities.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jose-sinacento/specialities/issues"
+  },
+  "homepage": "https://github.com/jose-sinacento/specialities#readme"
 }
